springboot-frontapp/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springboot-frontapp
  labels:
    app: springboot-frontapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: springboot-frontapp
  template:
    metadata:
      labels:
        app: springboot-frontapp
    spec:
      containers:
        - name: springboot-frontapp
          image: cadbcraftsman/springboot-frontapp:1.0.0-SNAPSHOT
          imagePullPolicy: IfNotPresent
          lifecycle:
            preStop:
              exec:
                command: [ "sh", "-c", "sleep 5" ]
          ports:
            - containerPort: 8080
