springboot-frontapp/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: springboot-frontapp
  labels:
    app: springboot-frontapp
spec:
  type: ClusterIP
  selector:
    app: springboot-frontapp
  ports:
  - protocol: TCP
    port: 80
    targetPort: 9080
